fix mobile overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,10 @@ body,
 .App {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
+  padding: 0;
+  margin: 0;
 }
 @media (min-width: 1281px) and (max-width: 1360px) {
   html {
